--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,17 @@
-Header always set X-Content-Type-Options nosniff
-Header always set X-Frame-Options DENY
-Header always set X-XSS-Protection "1; mode=block"
+# Modern Security Headers (removendo X-XSS-Protection e X-Frame-Options conforme recomendações)
+Header always set X-Content-Type-Options "nosniff"
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
-Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; connect-src 'self' https://generativelanguage.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com;"
+Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://generativelanguage.googleapis.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https://generativelanguage.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com; frame-ancestors 'none';"
 
-<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg)$">
-    Header set Cache-Control "public, max-age=31536000"
+# Remove headers desnecessários/deprecated
+Header unset X-XSS-Protection
+Header unset X-Frame-Options
+Header unset Expires
+
+# Cache Control com immutable directive
+<FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2)$">
+    Header set Cache-Control "public, max-age=31536000, immutable"
+    Header unset Expires
 </FilesMatch>
 
 <FilesMatch "\.(html|htm)$">
@@ -25,5 +31,22 @@ Header always set Content-Security-Policy "default-src 'self'; script-src 'self'
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# MIME Types
+# MIME Types corretos para fontes (sem charset=utf-8)
+<FilesMatch "\.(woff2)$">
+    Header set Content-Type "font/woff2"
+    Header unset charset
+</FilesMatch>
+
+<FilesMatch "\.(woff)$">
+    Header set Content-Type "font/woff"
+    Header unset charset  
+</FilesMatch>
+
+# Define MIME types corretos no servidor
 AddType font/woff2 .woff2
+AddType font/woff .woff
+
+# Remove charset dos headers de fonte
+<FilesMatch "\.(woff2|woff|ttf|otf)$">
+    Header edit Content-Type "; charset=.*$" ""
+</FilesMatch>
